--- a/ui/html/dashboard/main.html
+++ b/ui/html/dashboard/main.html
@@ -397,9 +397,9 @@
                                 <p align="center" id="NoProject"><span style="border: 1px; font-size:15px;
                                          font-style: italic; font-weight: 100;">진행중인 프로젝트가 없습니다.</span></p>
                                 <div class="row p-2" style="height: 100%; width: 100%; overflow-y: auto;">
-<!--                                <div class="row p-2" style="text-align: center">-->
-<!--                                    style="height: 100%; overflow-y: auto"-->
-<!--                                    <div class="pgn-modal-wrapper" style="height: 100%; overflow-y: auto">-->
+                                    <!--                                <div class="row p-2" style="text-align: center">-->
+                                    <!--                                    style="height: 100%; overflow-y: auto"-->
+                                    <!--                                    <div class="pgn-modal-wrapper" style="height: 100%; overflow-y: auto">-->
                                     <div class="canvas-wrapper" style="margin: 0 auto">
                                         <canvas class="pie-chart" id="pie-chart-category"></canvas>
                                     </div>
@@ -519,6 +519,7 @@
 <script src="/js/demo.js"></script>
 <script src="/js/script.js"></script>
 <script>
+    // 계정별 태그정보 (최대 5개)
     var tg_total = [5];
 
     function GetDashBoard_Info1() {
@@ -539,12 +540,8 @@
                     $('#PI_4').text(rObj.info1.closed);
 
                 } else if (r.status === 403) {
-                    const tokenResult = Refresh();
-                    if (tokenResult) {
-                        GetDashBoard_Info1();
-                    } else {
-                        document.location.href = '/';
-                    }
+                    Refresh();
+                    GetDashBoard_Info1();
                 }
             }
         };
@@ -833,12 +830,8 @@
                             '</div></td></tr>');
                     }
                 } else if (r.status === 403) {
-                    const tokenResult = Refresh();
-                    if (tokenResult) {
-                        GetDashBoard_Info3();
-                    } else {
-                        document.location.href = '/';
-                    }
+                    Refresh();
+                    GetDashBoard_Info3();
                 }
             }
         };
@@ -904,12 +897,8 @@
                             '</div></td></tr>');
                     }
                 } else if (r.status === 403) {
-                    const tokenResult = Refresh();
-                    if (tokenResult) {
-                        GetDashBoard_Info3();
-                    } else {
-                        document.location.href = '/';
-                    }
+                    Refresh();
+                    GetDashBoard_Info3();
                 }
             }
         };
@@ -924,6 +913,7 @@
     function CloseResultViewer() {
         $("#result_viewer").hide();
     }
+
     function GetResult(p_no) {
         //    todo GetResult api 구현해야함
         console.log('GetResult : p_no -> ' + p_no)
@@ -970,11 +960,11 @@
                             '</tr>' +
                             '<tr>' +
                             '<td width="200">유출 상태</td>' +
-                            '<td class="font-weight-normal">' + rObj.resultDetail.ProjectInfo.p_status_percent +' %'+ '</td>' +
+                            '<td class="font-weight-normal">' + rObj.resultDetail.ProjectInfo.p_status_percent + ' %' + '</td>' +
                             '</tr>' +
                             '<tr>' +
                             '<td width="200">메일 전송률</td>' +
-                            '<td class="font-weight-normal">' + rObj.resultDetail.ProjectInfo.progress_percent +' %'+ '</td>' +
+                            '<td class="font-weight-normal">' + rObj.resultDetail.ProjectInfo.progress_percent + ' %' + '</td>' +
                             '</tr>' +
                             '<tr>' +
                             '<td width="200">프로젝트 기간</td>' +
@@ -1023,73 +1013,73 @@
                             '</tr>'
                         );
                         warnLevel = '양호'
-                        if (rObj.resultDetail.ProjectSummary.ResultOfAll.rate > 70){
+                        if (rObj.resultDetail.ProjectSummary.ResultOfAll.rate > 70) {
                             warnLevel = '심각'
-                        } else if (rObj.resultDetail.ProjectSummary.ResultOfAll.rate > 30){
+                        } else if (rObj.resultDetail.ProjectSummary.ResultOfAll.rate > 30) {
                             warnLevel = '주의'
                         }
                         $('#totalResult > tbody:last').append(
                             '<tr>' +
                             '<td >전체</td>' +
                             '<td >' + rObj.resultDetail.ProjectSummary.ResultOfAll.infection_count +
-                            ' / ' +rObj.resultDetail.ProjectSummary.ResultOfAll.total_count +' 명'+'</td>' +
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultOfAll.rate +' %' +'</td>' +
-                            '<td >'+warnLevel+'</td>' +
+                            ' / ' + rObj.resultDetail.ProjectSummary.ResultOfAll.total_count + ' 명' + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultOfAll.rate + ' %' + '</td>' +
+                            '<td >' + warnLevel + '</td>' +
                             '</tr>'
                         );
                         $('#resultPerClassification > tbody:last').append(
                             '<tr>' +
                             '<td >태그</td>' +
-                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.tag_name +'</td>'+
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.infection_count +
-                            ' / ' +rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.total_count +' 명'+'</td>' +
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.rate+' %'+'</td>' +
-                            '</tr>'+
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.tag_name + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.infection_count +
+                            ' / ' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.total_count + ' 명' + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CTag.rate + ' %' + '</td>' +
+                            '</tr>' +
                             '<tr>' +
                             '<td >소속</td>' +
-                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.organ_name +'</td>'+
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.infection_count +
-                            ' / ' +rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.total_count +' 명'+'</td>' +
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.rate+' %'+'</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.organ_name + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.infection_count +
+                            ' / ' + rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.total_count + ' 명' + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.COrgan.rate + ' %' + '</td>' +
                             '</tr>' +
                             '<tr>' +
                             '<td >직급</td>' +
-                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.position_name +'</td>'+
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.infection_count +
-                            ' / ' +rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.total_count +' 명'+'</td>' +
-                            '<td >'+rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.rate+' %'+'</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.position_name + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.infection_count +
+                            ' / ' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.total_count + ' 명' + '</td>' +
+                            '<td >' + rObj.resultDetail.ProjectSummary.ResultPerClassification.CPosition.rate + ' %' + '</td>' +
                             '</tr>'
                         );
                         for (let i = 0; i < rObj.resultDetail.ResultPerStatistic.PerTag.length; i++) {
                             $('#perTag > tbody:last').append(
                                 '<tr>' +
-                                '<td >'+rObj.resultDetail.ResultPerStatistic.PerTag[i].tag_name+'</td>' +
-                                '<td ><progress class="valign-middle" value="'+rObj.resultDetail.ResultPerStatistic.PerTag[i].infection_count+'" max="'+
-                                rObj.resultDetail.ResultPerStatistic.PerTag[i].total_count+'"></progress>'+
-                                rObj.resultDetail.ResultPerStatistic.PerTag[i].rate+' %('+rObj.resultDetail.ResultPerStatistic.PerTag[i].infection_count+
-                                ' / ' +rObj.resultDetail.ResultPerStatistic.PerTag[i].total_count +' 명)'+'</td>' +
+                                '<td >' + rObj.resultDetail.ResultPerStatistic.PerTag[i].tag_name + '</td>' +
+                                '<td ><progress class="valign-middle" value="' + rObj.resultDetail.ResultPerStatistic.PerTag[i].infection_count + '" max="' +
+                                rObj.resultDetail.ResultPerStatistic.PerTag[i].total_count + '"></progress>' +
+                                rObj.resultDetail.ResultPerStatistic.PerTag[i].rate + ' %(' + rObj.resultDetail.ResultPerStatistic.PerTag[i].infection_count +
+                                ' / ' + rObj.resultDetail.ResultPerStatistic.PerTag[i].total_count + ' 명)' + '</td>' +
                                 '</tr>'
                             )
                         }
                         for (let i = 0; i < rObj.resultDetail.ResultPerStatistic.PerOrgan.length; i++) {
                             $('#perOrgan > tbody:last').append(
                                 '<tr>' +
-                                '<td >'+rObj.resultDetail.ResultPerStatistic.PerOrgan[i].organ_name+'</td>' +
-                                '<td ><progress class="valign-middle" value="'+rObj.resultDetail.ResultPerStatistic.PerOrgan[i].infection_count+'" max="'+
-                                rObj.resultDetail.ResultPerStatistic.PerOrgan[i].total_count+'"></progress>'+
-                                rObj.resultDetail.ResultPerStatistic.PerOrgan[i].rate+' %('+rObj.resultDetail.ResultPerStatistic.PerOrgan[i].infection_count+
-                                ' / ' +rObj.resultDetail.ResultPerStatistic.PerOrgan[i].total_count +' 명)'+'</td>' +
+                                '<td >' + rObj.resultDetail.ResultPerStatistic.PerOrgan[i].organ_name + '</td>' +
+                                '<td ><progress class="valign-middle" value="' + rObj.resultDetail.ResultPerStatistic.PerOrgan[i].infection_count + '" max="' +
+                                rObj.resultDetail.ResultPerStatistic.PerOrgan[i].total_count + '"></progress>' +
+                                rObj.resultDetail.ResultPerStatistic.PerOrgan[i].rate + ' %(' + rObj.resultDetail.ResultPerStatistic.PerOrgan[i].infection_count +
+                                ' / ' + rObj.resultDetail.ResultPerStatistic.PerOrgan[i].total_count + ' 명)' + '</td>' +
                                 '</tr>'
                             )
                         }
                         for (let i = 0; i < rObj.resultDetail.ResultPerStatistic.PerPosition.length; i++) {
                             $('#perPosition > tbody:last').append(
                                 '<tr>' +
-                                '<td >'+rObj.resultDetail.ResultPerStatistic.PerPosition[i].position_name+'</td>' +
-                                '<td ><progress class="valign-middle" value="'+rObj.resultDetail.ResultPerStatistic.PerPosition[i].infection_count+'" max="'+
-                                rObj.resultDetail.ResultPerStatistic.PerPosition[i].total_count+'"></progress>'+
-                                rObj.resultDetail.ResultPerStatistic.PerPosition[i].rate+' %('+rObj.resultDetail.ResultPerStatistic.PerPosition[i].infection_count+
-                                ' / ' +rObj.resultDetail.ResultPerStatistic.PerPosition[i].total_count +' 명)'+'</td>' +
+                                '<td >' + rObj.resultDetail.ResultPerStatistic.PerPosition[i].position_name + '</td>' +
+                                '<td ><progress class="valign-middle" value="' + rObj.resultDetail.ResultPerStatistic.PerPosition[i].infection_count + '" max="' +
+                                rObj.resultDetail.ResultPerStatistic.PerPosition[i].total_count + '"></progress>' +
+                                rObj.resultDetail.ResultPerStatistic.PerPosition[i].rate + ' %(' + rObj.resultDetail.ResultPerStatistic.PerPosition[i].infection_count +
+                                ' / ' + rObj.resultDetail.ResultPerStatistic.PerPosition[i].total_count + ' 명)' + '</td>' +
                                 '</tr>'
                             )
                         }
@@ -1098,12 +1088,8 @@
                     }
 
                 } else if (r.status === 403) {
-                    const tokenResult = Refresh();
-                    if (tokenResult) {
-                        GetDashBoard_Info3();
-                    } else {
-                        document.location.href = '/';
-                    }
+                    Refresh();
+                    GetDashBoard_Info3();
                 }
             }
         };
