--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#FFFFFF">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, #FFFFFF">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
     <title>REDTEAM | Login Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
@@ -15,13 +15,20 @@
 </head>
 
 <body>
-<div class="center-wrapper">
-    <div class="centered-row">
-        <div class="col-md-3">
+
+<video muted autoplay loop
+       style="margin: 0; position: fixed; min-width: 100%; min-height: 100%; max-width: 130%; max-height: 130%">
+    <source src="/video/intro.mp4" type="video/mp4">
+    <strong>Your browser does not support the video tag.</strong>
+</video>
+
+<div class="login-container-wrapper">
+    <div class="login-container">
+        <div class="login_container-form">
             <h4 class="color--primary text--center">REDTEAM 악성메일 모의훈련</h4>
-            <div class="box">
-                <div class="box-header">
-                    <img src="/image/big_icon.png" alt="REDTEAM_logo" style="max-width: 100%; height: auto;">
+            <div id="box">
+                <div class="box-header" style="text-align: center; margin-bottom: 2%">
+                    <img src="/image/big_icon.png" alt="REDTEAM_logo" style="max-width: 100%; margin: auto;">
                 </div>
                 <div class="box-body">
                     <form action="" id="login_form">
@@ -33,7 +40,7 @@
                     <button class="btn btn-md btn-primary btn-block" id="login-btn" onclick="Login()">로그인</button>
                 </div>
             </div>
-            <span class="d-block mt-4 helper-text text--center">회원이 아니신가요? <a class="ml-1"
+            <span class="d-block mt-4 helper-text text--center" style="color: white">회원이 아니신가요? <a class="ml-1"
                                                                               href="./register">회원가입하기</a></span>
         </div>
     </div>
