--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -8,7 +8,7 @@
     <title>REDTEAM | 프로젝트 관리</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
-    <link rel="stylesheet" href="/css/sport.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/sport.css" type="text/css">
     <link rel="stylesheet" href="/css/choices.min.css" type="text/css">
     <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap-grid.css">-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
@@ -527,15 +527,15 @@
                                 // console.log(rObj.project_list
                                 if (rObj.project_list[i].tag_no[j] !== "") {
                                     if (tg_total[0] === rObj.project_list[i].tag_no[j]) {
-                                        full_tag += '<label id="label1">' + rObj.project_list[i].tag_no[j] + '</label>'
+                                        full_tag += '<div id="label1">' + rObj.project_list[i].tag_no[j] + '</div>'
                                     } else if (tg_total[1] === rObj.project_list[i].tag_no[j]) {
-                                        full_tag += '<label id="label2">' + rObj.project_list[i].tag_no[j] + '</label>'
+                                        full_tag += '<div id="label2">' + rObj.project_list[i].tag_no[j] + '</div>'
                                     } else if (tg_total[2] === rObj.project_list[i].tag_no[j]) {
-                                        full_tag += '<label id="label3">' + rObj.project_list[i].tag_no[j] + '</label>'
+                                        full_tag += '<div id="label3">' + rObj.project_list[i].tag_no[j] + '</div>'
                                     } else if (tg_total[3] === rObj.project_list[i].tag_no[j]) {
-                                        full_tag += '<label id="label4">' + rObj.project_list[i].tag_no[j] + '</label>'
+                                        full_tag += '<div id="label4">' + rObj.project_list[i].tag_no[j] + '</div>'
                                     } else if (tg_total[4] === rObj.project_list[i].tag_no[j]) {
-                                        full_tag += '<label id="label5">' + rObj.project_list[i].tag_no[j] + '</label>'
+                                        full_tag += '<div id="label5">' + rObj.project_list[i].tag_no[j] + '</div>'
                                     }
                                 }
                             }
