#134 리프레시 토큰 버그 수정

--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -451,8 +451,12 @@
                         $('#tag').append("<option value=''>등록된 대상자가 없습니다.</option>");
                     }
                 } else if (r.status === 403) {
-                    Refresh();
-                    GetTag();
+                    if (Verify()) {
+                        Refresh();
+                        GetTag();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     document.location.href = '/';
                 }
@@ -483,8 +487,12 @@
                         $('#template').append("<option value=''>등록된 템플릿이 없습니다.</option>");
                     }
                 } else if (r.status === 403) {
-                    Refresh();
-                    GetTmpl();
+                    if (Verify()) {
+                        Refresh();
+                        GetTmpl();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     document.location.href = '/';
                 }
@@ -643,8 +651,12 @@
                             '</div></td></tr>');
                     }
                 } else if (r.status === 403) {
-                    Refresh();
-                    GetProject();
+                    if (Verify()) {
+                        Refresh();
+                        GetProject();
+                    } else {
+                        document.location.href = '/';
+                    }
                 }
             }
         };
@@ -690,8 +702,12 @@
                     alert("프로젝트 생성이 완료되었습니다.");
                     location.reload();
                 } else if (r.status === 403) {
-                    Refresh();
-                    CreateProject();
+                    if (Verify()) {
+                        Refresh();
+                        CreateProject();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else if (r.status === 400) {
                     alert("프로젝트 생성에 필요한 정보들이 전부 입력되지 않았거나 \n형식이 올바르지 않습니다.");
                 } else if (r.status === 402) {
@@ -738,8 +754,12 @@
                         alert('해당 프로젝트가 종료되었습니다.');
                         document.location.reload();
                     } else if (r.status === 403) {
-                        Refresh();
-                        ProjectEnd(p_no);
+                        if (Verify()) {
+                            Refresh();
+                            ProjectEnd(p_no);
+                        } else {
+                            document.location.href = '/';
+                        }
                     } else {
                         document.location.href = '/';
                     }
@@ -766,8 +786,12 @@
                         alert('프로젝트가 시작되었습니다.');
                         document.location.reload();
                     } else if (r.status === 403) {
-                        Refresh();
-                        ProjectStart(p_no);
+                        if (Verify()) {
+                            Refresh();
+                            ProjectStart(p_no);
+                        } else {
+                            document.location.href = '/';
+                        }
                     }
                 }
             };
@@ -805,8 +829,12 @@
                         // location.reload()
                         // console.log('프로젝트 종료일 변경')
                     } else if (r.status === 403) {
-                        Refresh();
-                        modifyEndDate(p_no);
+                        if (Verify()) {
+                            Refresh();
+                            modifyEndDate(p_no);
+                        } else {
+                            document.location.href = '/';
+                        }
                     } else if (r.status === 400) {
                         rObj = JSON.parse(r.responseText);
                         if (rObj.dateCompare === true) {
@@ -852,9 +880,13 @@
                                 alert("삭제가 완료되었습니다.");
                                 location.reload();
                             } else if (r.status === 403) {
-                                Refresh();
-                                alert("세션 만료, 다시 삭제해 주세요.");
-                                // Note 위의 알림없이 메서드가 다시 작동하여 삭제되도록 개선 필요.
+                                if (Verify()) {
+                                    Refresh();
+                                    alert("세션 만료, 다시 삭제해 주세요.");
+                                    // Note 위의 알림없이 메서드가 다시 작동하여 삭제되도록 개선 필요.
+                                } else {
+                                    document.location.href = '/';
+                                }
                             } else {
                                 alert("삭제 실패했습니다.");
                             }
@@ -931,8 +963,12 @@
                     $('#download_type').val(rObj.tmpls.download_type);
 
                 } else if (r.status === 403) {
-                    Refresh();
-                    GetTmlDetailPrjMgr(tml_no, p_no);
+                    if (Verify()) {
+                        Refresh();
+                        GetTmlDetailPrjMgr(tml_no, p_no);
+                    } else {
+                        document.location.href = '/';
+                    }
                 }
             }
         };
@@ -973,8 +1009,12 @@
                     alert("템플릿 수정 완료했습니다.")
                     location.reload()
                 } else if (r.status === 403) {
-                    Refresh();
-                    editTml();
+                    if (Verify()) {
+                        Refresh();
+                        editTml();
+                    } else {
+                        document.location.href = '/';
+                    }
                 }
             }
         };
