--- a/ui/html/setting/person-setting.html
+++ b/ui/html/setting/person-setting.html
@@ -169,8 +169,12 @@
                     $('#email').val(responseObj.user_info.email);
                     $('#name').val(responseObj.user_info.name);
                 } else if (r.status === 403) {
-                    Refresh();
-                    GetUserSetting();
+                    if (Verify()) {
+                        Refresh();
+                        GetUserSetting();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     document.location.href = '/';
                 }
@@ -210,8 +214,12 @@
                 } else if (r.status === 401) {
                     alert("비밀번호를 확인해주세요.");
                 } else if (r.status === 403) {
-                    Refresh();
-                    SetUserSetting();
+                    if (Verify()) {
+                        Refresh();
+                        SetUserSetting();
+                    } else {
+                        document.location.href = '/';
+                    }
                 }
             }
         };
@@ -234,8 +242,12 @@
                     alert("정상적으로 계정이 삭제되었습니다.");
                     Logout();
                 } else if (r.status === 403) {
-                    Refresh();
-                    deleteAccount();
+                    if (Verify()) {
+                        Refresh();
+                        deleteAccount();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     alert("계정 삭제 실패했습니다.")
                 }
