--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -189,9 +189,13 @@
                     $('#timeout').val(responseObj.smtp_setting.smtp_timeout);
                     // console.log($('#protocol option:selected').val());
                     // console.log($('#tls_protocol option:selected').val());
-                } else if(r.status === 403) {
-                    Refresh();
-                    GetSmtpSetting();
+                } else if (r.status === 403) {
+                    if (Verify()) {
+                        Refresh();
+                        GetSmtpSetting();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     document.location.href = '/';
                 }
@@ -232,8 +236,12 @@
                 } else if (r.status === 401) {
                     alert("비밀번호를 확인해주세요.");
                 } else if (r.status === 403) {
-                    Refresh();
-                    SetSmtpSetting();
+                    if (Verify()) {
+                        Refresh();
+                        SetSmtpSetting();
+                    } else {
+                        document.location.href = '/';
+                    }
                 }
             }
         };
@@ -268,8 +276,12 @@
                 if (r.status === 200) {
                     alert("SMTP 연결 완료");
                 } else if (r.status === 403) {
-                    Refresh();
-                    SmtpConnectionTest();
+                    if (Verify()) {
+                        Refresh();
+                        SmtpConnectionTest();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     responseObj = r.responseText;
                     alert(responseObj)
@@ -308,9 +320,13 @@
             if (r.readyState === 4) {
                 if (r.status === 200) {
                     alert("SMTP 연결 완료");
-                } else if(r.status === 403) {
-                    Refresh();
-                    SmtpSendMailTest();
+                } else if (r.status === 403) {
+                    if (Verify()) {
+                        Refresh();
+                        SmtpSendMailTest();
+                    } else {
+                        document.location.href = '/';
+                    }
                 } else {
                     responseObj = JSON.parse(r.responseText);
                     alert("SMTP 정보를 확인해주세요.\n"+responseObj.error.Msg);
