아이콘 누를경우 메인화면으로 이동

--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -18,7 +18,8 @@
 <!--네이게이터-->
 <div class="sidebar">
     <div class="sidebar-header"><a href="#">
-        <img src="/image/intro_icon.png" style="max-width: 80%; height: auto;">
+        <img src="/image/intro_icon.png" style="max-width: 80%; height: auto;"
+             onClick="location.href='/dashboard/total'"/>
     </a>
         <div class="sidebar-control"><i class="la la-navicon"></i></div>
     </div>
@@ -233,8 +234,6 @@
                     location.reload();
                 } else if (r.status === 400) {
                     alert("SMTP 정보를 확인해주세요.");
-                } else if (r.status === 401) {
-                    alert("비밀번호를 확인해주세요.");
                 } else if (r.status === 403) {
                     if (Verify()) {
                         Refresh();
@@ -242,6 +241,8 @@
                     } else {
                         document.location.href = '/';
                     }
+                } else if (r.status === 409) {
+                    alert("비밀번호를 확인해주세요.");
                 }
             }
         };
