--- a/ui/html/warn/google2.html
+++ b/ui/html/warn/google2.html
@@ -842,7 +842,7 @@
     }
 
     var infection_link = infection(connection_link);
-    console.log(infection_link);
+    // console.log(infection_link);
 
     $('#infection_link_1').attr('href', "http://localhost:8888/warn/warning2?" + infection_link);
     $('#infection_link_2').attr('href', "http://localhost:8888/warn/warning2?" + infection_link);
