#134 토큰 버그 수정

--- a/ui/html/warn/warning2.html
+++ b/ui/html/warn/warning2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>wwwwwwwwwwwwwwwwwwww</title>
     <link rel="stylesheet" href="/css/hack.min.css" type="text/css">
-    <script type="text/javascript">alert("위험한 링크를 클릭했습니다.");</script>
+    <script type="text/javascript">alert("당신의 정보는 탈취당했습니다.");</script>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 
 <div class="hack">
     <h1 id="Computer">
-        당신의 컴퓨터 해킹당했다.
+        당신의 정보 해킹당했다.
     </h1>
     <h1 id="Info">
         脚本编制...
